# PRO_Lab

./: .gitignore
results/: results_summary.md
results/csv/: log_Q0001.csv  log_Q001.csv  log_Q01.csv  log_Q1.csv  log_R0001.csv  log_R005.csv  log_R05.csv  log_R2.csv  log_W0.csv  log_W2.csv  log_W3.csv  log_perf.csv
ros2_ws/: .gitignore  README.md  run_experiment.sh
ros2_ws/src/prob_robotics_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/prob_robotics_bringup/config/: filters_Q0.001.yaml  filters_Q0.01.yaml  filters_Q0.1.yaml  filters_Q1.0.yaml  filters_R0.001.yaml  filters_R0.05.yaml  filters_R0.5.yaml  filters_R2.0.yaml  filters_W0_baseline.yaml  filters_W2_large_offset.yaml  filters_W3_convinced_wrong.yaml  filters_correct_init.yaml
ros2_ws/src/prob_robotics_bringup/launch/: all_filters.launch.py
ros2_ws/src/prob_robotics_bringup/rviz/: prob_robotics.rviz
ros2_ws/src/prob_robotics_eval/: CMakeLists.txt  package.xml
ros2_ws/src/prob_robotics_eval/scripts/: evaluate.py
ros2_ws/src/prob_robotics_eval/src/: auto_driver.cpp  trajectory_logger.cpp
ros2_ws/src/prob_robotics_filters/: CMakeLists.txt  package.xml
ros2_ws/src/prob_robotics_filters/include/prob_robotics_filters/: utils.hpp
ros2_ws/src/prob_robotics_filters/src/: ekf_node.cpp  kf_node.cpp  landmark_detector.cpp  pf_node.cpp
